src/styles/main.css
html {
    height: 100%;
}
body {
    height: 100%;
    width: 100%;
    background-color: #e4e4e4;
    justify-content: center;
    
}
.container-fluid,.row{
    height: 100%;
}
#app {
    height: 100%;
}

#intro {
    min-height: 100%;
    overflow: hidden;
    background: url('../images/background.png') no-repeat;;
    background-size: cover;
}
.logo-div{
    z-index:10;
    width: 80%;
    margin-top: 60px;
    margin-bottom: 50px;
    margin-left: calc(50% - 100px);
}
.logo{
    width: 200px;
}
.introtext {
    color: #fff;
    text-align: center;
}
.button-connect {
    margin: 32px 0;
    padding: 0 16px;
    box-sizing: border-box;

}
.btn-success{
    text-align: center;
    display: block;
    background: #00b63f!important;
    color: #fff;
    height: 50px;
    text-transform: uppercase;
}
.NewsComponent
{
    height: 100%;
    padding: 0px;
}
.slick-slider,.slick-list,.slick-track,.slick-slide
{
    height: 100% !important;
}
.slick-slide{
    overflow-y: auto
}
.black{
    background-color: black;
    height: 20px;
}
.newsItem{
    min-height: 100%;
    background-color: #fff;
    overflow-y: auto;
}
.newsImage{
     width: 100%;
     height:40vh;
}
.contentBox{
    padding: 0 16px;
    box-sizing: border-box;
    overflow-y: auto;
}
.sDescription
{
    color:#666;
    margin:10px auto;
    font-weight:300;
    font-size:20px;
    line-height:24px;
    font-family:'Lato', sans-serif;
}
.title{
    font-size: 24px;
    font-weight: 600;
    line-height: 32px;
    font-family: 'Lato', sans-serif;
}
.infoBar{
    font-weight:400;
    color:#666;
    font-size:12px;
}
.category{
    margin: 5px auto;
    font-size: 12px;
    text-align: center;
    color: #666;
    text-transform: uppercase;
    font-weight: 600;
    letter-spacing: 1px;
    
}
.readMore{
    color:#01b73f;
    font-size: 16px;
    line-height:24px;
    margin: 0;
    font-family:'Lato', sans-serif;
    font-style:italic;
    font-weight: 300;
}
.bookmarkBar{
    float: right;
    text-decoration: none;
    font-size: 15px;
    color: #666;
}
.BackButton{
    position: absolute;
    width: 40px;
    cursor: pointer;
    cursor: hand;
    margin-left: 15px;
}
.fa-bookmark-o
{
    font-size:18px;
    margin-right:5px;
}
.bookmarks{
    font-weight: 500;
    font-style: italic;
    font-size: 14px;
}
.footerBar{
    width: 100%;
    padding-left: 15px;
}
.footerMedia{
    border-radius:100%;
    margin-right: 10px;
    display: inline !important;
}
.author{
    font-size: 12px;
    color: #01b73f;
    text-transform: uppercase;
    font-weight: 600;
    letter-spacing: 1px;
}
.subscriber{
    font-weight: 500; 
    font-style: italic;
    font-size: 14px;
    margin-left: 25px;
}

